--- a/package.json
+++ b/package.json
@@ -7,13 +7,24 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node --watch server.js",
-    "start:app": "./scripts/start.sh"
+    "start:app": "./scripts/start.sh",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
-  "keywords": ["salesforce", "metadata", "comparison", "diff"],
+  "keywords": [
+    "salesforce",
+    "metadata",
+    "comparison",
+    "diff"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
     "monaco-editor": "^0.45.0"
+  },
+  "devDependencies": {
+    "eslint": "^9.39.1",
+    "globals": "^16.5.0"
   }
 }
