Implement DEV mode indicator in the UI and update styles for better visibility. Modify .gitignore to exclude Salesforce CLI configuration directories. Adjust app.js to show the DEV mode indicator when active.

--- a/.gitignore
+++ b/.gitignore
@@ -37,9 +37,8 @@ build/
 tmp/
 temp/
 
-.sf/*
-.sfdx/*
+# Salesforce CLI configuration (should not be versioned)
+.sf/
+.sfdx/
 force-app/
 sfdx-project.json
-.sf/config.json
-.sfdx/sfdx-config.json
